samples/_failures_safe/1761317781_c7810f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a236fef.c: In function ‘main’:
./samples/SAFE/__tmp_7a236fef.c:149:22: error: expected ‘)’ at end of input
  149 |     print_matrix(mat2
      |                 ~    ^
      |                      )
./samples/SAFE/__tmp_7a236fef.c:149:5: error: expected declaration or statement at end of input
  149 |     print_matrix(mat2
      |     ^~~~~~~~~~~~
